# conditional-monge

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README copy.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi.yml
Notebooks/03_CMonge_results/: Fig. A7, A10- Performance vs distance in embedding.ipynb  Figure 4, Fig. A4 - 4i ID OOD results.ipynb  Figure 5C - Full sciplex chemCPA and CMonge comparison.ipynb  Figure 5D,  Fig. A11  - CMonge sciplex Source, target, transport UMAPs.ipynb  Figure 5D, Fig. A11 - chemCPA sciplex Source, Target, Transport UMAPs.ipynb  Table A4, A6, A7 - chemCPA - ID - OOD.ipynb  Table A6, A7 - CMonge 5perc OOD CV.ipynb
Notebooks/04_CMonge_manuscript_analyses/: 5perc drug split.ipynb  Adata for monge drug dose ood.ipynb  Adata for monge drug dose.ipynb  Adata_for_monge_ID_sciplex.ipynb  Adata_for_monge_dose_ood.ipynb  RDkit embeddings for 4i.ipynb  chemCPA model size.ipynb
cmonge/: __init__.py  analysis.py  evaluate.py  metrics.py  utils.py
cmonge/datasets/: __init__.py  chemCPA_conditional_loader.py  chemCPA_loaders.py  chemCPA_single_loader.py  conditional_loader.py  single_loader.py
cmonge/models/: chemCPA.py  embedding.py  mestibator.py  nn.py  rdkit.py
cmonge/tests/: conftest.py  test_imports.py
cmonge/tests/configs/: synthetic.yml  test.h5ad
cmonge/tests/datasets/: test_conditional_loader.py  test_single_loader.py
cmonge/trainers/: ae_trainer.py  chemCPA_trainer.py  conditional_monge_trainer.py  conditional_trainer.py  ot_trainer.py
configs/: autoencoder-4i.yml  autoencoder-demo.yml  autoencoder-sciplex.yml  autoencoder-synthetic.yml  conditional-dual-sciplex.yml  conditional-monge-sciplex.yml  demo_config.yml  dual-4i.yml  dual-sciplex.yml  dual-synthetic.yml  monge-4i.yml  monge-car.yml  monge-sciplex.yml  monge-synthetic.yml
data/: 4i_drug_smiles.csv  4i_drugs.smiles  dummy_data.h5ad  trapnell_drugs_smiles.csv
logs/: demo_logs.yml
models/demo/cond-sciplex/autoencoder_50_cond-sciplex_homogeneous_49/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
models/demo/cond-sciplex/autoencoder_50_cond-sciplex_homogeneous_49/ocdbt.process_0/: manifest.ocdbt
models/embed/demo/: rdkit
scripts/: demo_train.py  train.py
