[tool.poetry]
name = "cmonge"
version = "1.0.0"
description = "Extension of the Monge Gap to learn conditional optimal transport maps"
authors = ["Benedek Harsanyi <hben.0204@gmail.com>", "Jannis Born <jab@zurich.ibm.com>"]
readme = "README.md"


[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pre-commit = "*"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flax = "0.7.4"
optax = "0.1.9"
ott-jax = "0.4.4"
scikit-learn = "^1.4.0"
typer = "^0.9.0"
loguru = "^0.7.2"
optuna = "^3.5.0"
pandas = "^2.0.0"
seaborn = "^0.13.2"
dotmap = "^1.3.30"
umap-learn = "^0.5.5"
jaxlib = "0.4.20"
anndata = "^0.10.5.post1"
scanpy = "^1.9.8"
chex = "^0.1.85"
rdkit = "^2023.9.5"
jax = "0.4.20"
isort = "^5.13.2"
black = "^24.4.2"
ruff = "^0.5.4"
types-pyyaml = "^6.0.12.20240311"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["N8"]
