[tool.poetry]
name = "cmonge"
version = "0.1.1"
description = "Extension of the Monge Gap to learn conditional optimal transport maps"
authors = ["Alice Driessen <adr@zurich.ibm.com>", "Benedek Harsanyi <hben.0204@gmail.com>", "Jannis Born <jab@zurich.ibm.com>"]
readme = "README.md"
keywords = [
    "Machine Learning",
    "Optimal Transport",
    "Neural OT",
    "Monge Gap",
    "Conditional Distribution Learning"
]
homepage = "https://github.com/AI4SCR/conditional-monge"
repository = "https://github.com/AI4SCR/conditional-monge"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]


[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pre-commit = "*"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flax = "^0.10.2"
optax = "^0.2.4"
ott-jax = "^0.5.0"
scikit-learn = "^1.4.0"
typer = "^0.9.0"
loguru = "^0.7.2"
optuna = "^3.5.0"
pandas = "^2.0.0"
seaborn = "^0.13.2"
dotmap = "^1.3.30"
umap-learn = "^0.5.5"
jaxlib = "^0.4.36"
anndata = "^0.10.5.post1"
scanpy = "^1.9.8"
chex = "^0.1.85"
rdkit = "^2023.9.5"
jax = "^0.4.36"
isort = "^5.13.2"
black = "^24.4.2"
ruff = "^0.5.4"
types-pyyaml = "^6.0.12.20240311"
scipy = "1.12.0"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["N8"]
